# Age-Calculator

./: .gitignore  ARCHITECTURE.md  Age Calculator.txt  README.md  pyproject.toml  requirements.txt
Schema/: README.md  age-calculation.schema.json  age-result.schema.json  birth-date.schema.json  index.schema.json
src/agecalc/: __init__.py  __main__.py  calculations.py  cli.py  config.py  domain.py  exceptions.py  factory.py  formatters.py  parsing.py  services.py  storage.py
tests/cli/: test_cli.py
tests/core/: test_age.py  test_calculations.py  test_parsing.py
tests/storage/: test_repositories.py
