[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "age-calculator"
version = "0.1.0"
description = "A feature-rich CLI age calculator built as a small layered Python project."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Student Developer" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100",
    "mypy>=1.8",
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
agecalc = "agecalc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
packages = ["agecalc"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
